@@ -25,7 +25,7 @@ module IceCube
       end
 
       def build_s(builder)
-        builder.piece(:day) << "#{Date::DAYNAMES[day]}s"
+        builder.piece(:day) << day
       end
 
       def build_hash(builder)
@@ -44,8 +44,18 @@ module IceCube
         :wday
       end
 
-      StringBuilder.register_formatter(:day) do |segments|
-        "on #{StringBuilder.sentence(segments)}"
+      StringBuilder.register_formatter(:day) do |validation_days|
+        # sort the days
+        validation_days.sort!
+        # pick the right shortening, if applicable
+        if validation_days == [0, 6]
+          'on Weekends'
+        elsif validation_days == (1..5).to_a
+          'on Weekdays'
+        else
+          segments = validation_days.map { |d| "#{Date::DAYNAMES[d]}s" }
+          "on #{StringBuilder.sentence(segments)}"
+        end
       end
 
     end
